--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 Guia Ejercicios 1.pdf
 Ejercicios/articulos.txt
 .gitignore
+Ejercicios/TP2/insumos.txt
+Ejercicios/TP2/OrdenesCompra.txt
+Ejercicios/TP2/terminados.txt
+Ejercicios/TP2/__pycache__/contador.cpython-311.pyc
+Ejercicios/TP2/consumos.txt
+.gitignore
