--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Ejercicios/TP2/terminados.txt
 Ejercicios/TP2/__pycache__/contador.cpython-311.pyc
 Ejercicios/TP2/consumos.txt
 .gitignore
+Ejercicios/TP2/insumos (1).txt
