--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ Ejercicios/TP2/__pycache__/contador.cpython-311.pyc
 Ejercicios/TP2/consumos.txt
 .gitignore
 Ejercicios/TP2/insumos (1).txt
+Ejercicios/qr.py
+Ejercicios/TP2/consumos (1).txt
+Ejercicios/TP2/terminados (1).txt
+Ejercicios/TP2/TP2.py
+Ejercicios/TP2/Traspaso Entre Almacenes.py
+Ejercicios/qr.py
+
